# igc_lib

./: .gitignore  Untitled.ipynb  igc_lib.py  igc_lib_demo.py  pdflight.py  pyproject.toml  run_tests.sh  test_igc_lib.py  thermals.ipynb
lib/: dumpers.py  pandas.py
src/igc_lib/: igc_lib.py  igc_lib_demo.py  test_igc_lib.py
src/igc_lib/lib/: test_dumpers.py  test_geo.py  test_viterbi.py
testfiles/: flight_with_middle_landing.igc
tools/: baum_welch_trainer.py  requirements.txt
