[project]
name = "igc-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mathias Muench", email = "you@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pathlib2>=2.1.0",
    "simplekml>=1.3.1",
]

[project.scripts]
igc_lib_demo = "igc_lib.igc_lib_demo:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "biopython==1.85",
]
